// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > bold_typographic cover render is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:linear-gradient(135deg, #e11d48, #11131a);display:flex;align-items:center;padding:0 64px;}
.accent-band{position:absolute;top:0;left:0;width:14px;height:100%;background:#e11d48;}
.logo{position:absolute;top:56px;left:56px;display:flex;align-items:center;gap:14px;}
.brand-tag{color:rgba(255,255,255,0.8);font-size:22px;font-weight:600;}
.headline{color:#ffffff;font-size:82px;font-weight:900;line-height:1.02;letter-spacing:-0.03em;}
.rule{position:absolute;bottom:96px;left:64px;width:80px;height:5px;background:#e11d48;border-radius:3px;}
.name{position:absolute;bottom:48px;left:64px;color:rgba(255,255,255,0.8);font-size:24px;font-weight:600;}
</style></head><body>
<div class="accent-band"></div>
<div class="logo"><div style="width:52px;height:52px;border-radius:11px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:22px;">A</div><span class="brand-tag">@acmenews</span></div>
<div class="headline">Markets rally as central banks signal a pause on rate hikes</div>
<div class="rule"></div>
<div class="name">Acme Newsroom</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > bold_typographic cover with NO brandColor (default accent) is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:linear-gradient(135deg, #e11d48, #11131a);display:flex;align-items:center;padding:0 64px;}
.accent-band{position:absolute;top:0;left:0;width:14px;height:100%;background:#e11d48;}
.logo{position:absolute;top:56px;left:56px;display:flex;align-items:center;gap:14px;}
.brand-tag{color:rgba(255,255,255,0.8);font-size:22px;font-weight:600;}
.headline{color:#ffffff;font-size:82px;font-weight:900;line-height:1.02;letter-spacing:-0.03em;}
.rule{position:absolute;bottom:96px;left:64px;width:80px;height:5px;background:#e11d48;border-radius:3px;}
.name{position:absolute;bottom:48px;left:64px;color:rgba(255,255,255,0.8);font-size:24px;font-weight:600;}
</style></head><body>
<div class="accent-band"></div>
<div class="logo"><div style="width:52px;height:52px;border-radius:11px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:22px;">A</div><span class="brand-tag">@acmenews</span></div>
<div class="headline">Markets rally as central banks signal a pause on rate hikes</div>
<div class="rule"></div>
<div class="name">Acme Newsroom</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > carousel body slide render is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:linear-gradient(135deg, #e11d48, #11131a);-webkit-font-smoothing:antialiased;}
.bg{position:absolute;inset:0;background:linear-gradient(135deg, #e11d48, #11131a);}
.scrim{position:absolute;inset:0;background:linear-gradient(to top, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 50%, rgba(0,0,0,0) 100%);}
.accent-band{position:absolute;top:0;left:0;width:14px;height:100%;background:#e11d48;}
.logo{position:absolute;top:44px;left:48px;}
.block{position:absolute;left:56px;right:56px;bottom:96px;}
.label{font-style:italic;font-size:26px;font-weight:600;color:rgba(255,255,255,0.8);letter-spacing:0.01em;}
.rule{width:64px;height:4px;background:#e11d48;border-radius:2px;margin:14px 0 22px;}
.subhead{color:#ffffff;font-size:40px;font-weight:800;line-height:1.1;letter-spacing:-0.02em;margin-bottom:22px;word-break:break-word;}
.body{color:#ffffff;font-size:46px;font-weight:600;line-height:1.28;letter-spacing:-0.01em;word-break:break-word;}
.cta{position:absolute;inset:0;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:0 72px;text-align:center;}
.cta-rule{width:80px;height:5px;background:#e11d48;border-radius:3px;margin-bottom:32px;}
.cta-text{color:#ffffff;font-size:88px;font-weight:900;line-height:1.04;letter-spacing:-0.03em;word-break:break-word;}
.cta-sub{margin-top:24px;color:rgba(255,255,255,0.8);font-size:30px;font-weight:600;}
.handle{position:absolute;bottom:44px;left:56px;color:rgba(255,255,255,0.8);font-size:20px;font-weight:500;}
</style></head><body>
<div class="bg"></div><div class="scrim"></div>
<div class="accent-band"></div>
<div class="logo"><div style="width:64px;height:64px;border-radius:14px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:27px;">A</div></div>
<div class="block">
    <div class="label">Acme Newsroom</div>
    <div class="rule"></div>
    <div class="subhead">Markets rally as central banks signal a pause on rate hikes</div>
    <div class="body">The decision follows three consecutive quarters of easing inflation and steadier employment figures across major economies.</div>
  </div>
<div class="handle">@acmenews</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > carousel cta slide render is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:linear-gradient(135deg, #e11d48, #11131a);-webkit-font-smoothing:antialiased;}
.bg{position:absolute;inset:0;background:linear-gradient(135deg, #e11d48, #11131a);}
.scrim{position:absolute;inset:0;background:linear-gradient(to top, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 50%, rgba(0,0,0,0) 100%);}
.accent-band{position:absolute;top:0;left:0;width:14px;height:100%;background:#e11d48;}
.logo{position:absolute;top:44px;left:48px;}
.block{position:absolute;left:56px;right:56px;bottom:96px;}
.label{font-style:italic;font-size:26px;font-weight:600;color:rgba(255,255,255,0.8);letter-spacing:0.01em;}
.rule{width:64px;height:4px;background:#e11d48;border-radius:2px;margin:14px 0 22px;}
.subhead{color:#ffffff;font-size:40px;font-weight:800;line-height:1.1;letter-spacing:-0.02em;margin-bottom:22px;word-break:break-word;}
.body{color:#ffffff;font-size:46px;font-weight:600;line-height:1.28;letter-spacing:-0.01em;word-break:break-word;}
.cta{position:absolute;inset:0;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:0 72px;text-align:center;}
.cta-rule{width:80px;height:5px;background:#e11d48;border-radius:3px;margin-bottom:32px;}
.cta-text{color:#ffffff;font-size:88px;font-weight:900;line-height:1.04;letter-spacing:-0.03em;word-break:break-word;}
.cta-sub{margin-top:24px;color:rgba(255,255,255,0.8);font-size:30px;font-weight:600;}
.handle{position:absolute;bottom:44px;left:56px;color:rgba(255,255,255,0.8);font-size:20px;font-weight:500;}
</style></head><body>
<div class="bg"></div><div class="scrim"></div>
<div class="accent-band"></div>
<div class="logo"><div style="width:64px;height:64px;border-radius:14px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:27px;">A</div></div>
<div class="cta">
    <div class="cta-rule"></div>
    <div class="cta-text">Markets rally as central banks signal a pause on rate hikes</div>
    <div class="cta-sub">Follow @acmenews for more</div>
  </div>
<div class="handle">@acmenews</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > hook_bars cover render is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:#f7f7f8;}
.bg{position:absolute;inset:0;background:linear-gradient(135deg, #e11d48, #11131a);}
.logo{position:absolute;top:36px;left:40px;}
.bars{position:absolute;left:36px;right:36px;bottom:48px;display:flex;flex-direction:column;gap:14px;}
.bar{background:#fff;border-radius:10px;padding:18px 24px;box-shadow:0 6px 24px rgba(0,0,0,0.35);}
.hook{font-size:40px;font-weight:800;line-height:1.15;color:#111;}
.headline{font-size:44px;font-weight:800;line-height:1.12;color:#111;}
.headline .accent{color:#e11d48;}
</style></head><body>
<div class="bg"></div>
<div class="logo"><div style="width:56px;height:56px;border-radius:12px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:24px;">A</div></div>

<div class="bars">
  
  <div class="bar"><div class="headline">Markets rally as central banks signal a pause on rate hikes</div></div>
</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > hook_bars cover with NO brandColor (default accent) is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:#f7f7f8;}
.bg{position:absolute;inset:0;background:linear-gradient(135deg, #e11d48, #11131a);}
.logo{position:absolute;top:36px;left:40px;}
.bars{position:absolute;left:36px;right:36px;bottom:48px;display:flex;flex-direction:column;gap:14px;}
.bar{background:#fff;border-radius:10px;padding:18px 24px;box-shadow:0 6px 24px rgba(0,0,0,0.35);}
.hook{font-size:40px;font-weight:800;line-height:1.15;color:#111;}
.headline{font-size:44px;font-weight:800;line-height:1.12;color:#111;}
.headline .accent{color:#e11d48;}
</style></head><body>
<div class="bg"></div>
<div class="logo"><div style="width:56px;height:56px;border-radius:12px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:24px;">A</div></div>

<div class="bars">
  
  <div class="bar"><div class="headline">Markets rally as central banks signal a pause on rate hikes</div></div>
</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > hook_bars with a hook line is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:#f7f7f8;}
.bg{position:absolute;inset:0;background:linear-gradient(135deg, #e11d48, #11131a);}
.logo{position:absolute;top:36px;left:40px;}
.bars{position:absolute;left:36px;right:36px;bottom:48px;display:flex;flex-direction:column;gap:14px;}
.bar{background:#fff;border-radius:10px;padding:18px 24px;box-shadow:0 6px 24px rgba(0,0,0,0.35);}
.hook{font-size:40px;font-weight:800;line-height:1.15;color:#111;}
.headline{font-size:44px;font-weight:800;line-height:1.12;color:#111;}
.headline .accent{color:#e11d48;}
</style></head><body>
<div class="bg"></div>
<div class="logo"><div style="width:56px;height:56px;border-radius:12px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:24px;">A</div></div>

<div class="bars">
  <div class="bar"><div class="hook">This <span style="color:#e11d48">changes</span> everything</div></div>
  <div class="bar"><div class="headline">Markets rally as central banks signal a pause on rate hikes</div></div>
</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > postcard_grid cover render is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;font-family:'Inter',system-ui,sans-serif;background:#ffffff;padding:64px 56px;display:flex;flex-direction:column;}
.head{display:flex;align-items:center;gap:18px;margin-bottom:28px;}
.name-row{display:flex;align-items:center;gap:8px;}
.name{font-size:34px;font-weight:800;color:#0f1419;}
.handle{font-size:26px;color:#5b6470;margin-top:2px;}
.text{font-size:40px;line-height:1.3;color:#0f1419;font-weight:400;margin-bottom:32px;}
.collage{display:grid;gap:10px;flex:1;border-radius:18px;overflow:hidden;}
.collage img{width:100%;height:100%;object-fit:cover;}
.collage.two_up{grid-template-columns:1fr 1fr;}
.collage.three_up{grid-template-columns:1fr 1fr;grid-template-rows:1.4fr 1fr;}
.collage.three_up img:first-child{grid-column:1 / span 2;}
.collage.grid_2x2{grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;}
</style></head><body>
<div class="head">
  <div style="width:72px;height:72px;border-radius:16px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:30px;">A</div>
  <div>
    <div class="name-row"><span class="name">Acme Newsroom</span><svg class="verified-tick" width="26" height="26" viewBox="0 0 24 24" fill="#e11d48"><path d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.16-.032.322-.032.486 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.164-.012-.326-.032-.486 1.16-.688 1.943-1.99 1.943-3.486zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z"/></svg></div>
    <div class="handle">@acmenews</div>
  </div>
</div>
<div class="text">Markets rally as central banks signal a pause on rate hikes</div>

</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > postcard_grid cover with NO brandColor (default accent) is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;font-family:'Inter',system-ui,sans-serif;background:#ffffff;padding:64px 56px;display:flex;flex-direction:column;}
.head{display:flex;align-items:center;gap:18px;margin-bottom:28px;}
.name-row{display:flex;align-items:center;gap:8px;}
.name{font-size:34px;font-weight:800;color:#0f1419;}
.handle{font-size:26px;color:#5b6470;margin-top:2px;}
.text{font-size:40px;line-height:1.3;color:#0f1419;font-weight:400;margin-bottom:32px;}
.collage{display:grid;gap:10px;flex:1;border-radius:18px;overflow:hidden;}
.collage img{width:100%;height:100%;object-fit:cover;}
.collage.two_up{grid-template-columns:1fr 1fr;}
.collage.three_up{grid-template-columns:1fr 1fr;grid-template-rows:1.4fr 1fr;}
.collage.three_up img:first-child{grid-column:1 / span 2;}
.collage.grid_2x2{grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;}
</style></head><body>
<div class="head">
  <div style="width:72px;height:72px;border-radius:16px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:30px;">A</div>
  <div>
    <div class="name-row"><span class="name">Acme Newsroom</span><svg class="verified-tick" width="26" height="26" viewBox="0 0 24 24" fill="#1d9bf0"><path d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.16-.032.322-.032.486 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.164-.012-.326-.032-.486 1.16-.688 1.943-1.99 1.943-3.486zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z"/></svg></div>
    <div class="handle">@acmenews</div>
  </div>
</div>
<div class="text">Markets rally as central banks signal a pause on rate hikes</div>

</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > postcard_grid grid_2x2 render is deterministic 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;font-family:'Inter',system-ui,sans-serif;background:#ffffff;padding:64px 56px;display:flex;flex-direction:column;}
.head{display:flex;align-items:center;gap:18px;margin-bottom:28px;}
.name-row{display:flex;align-items:center;gap:8px;}
.name{font-size:34px;font-weight:800;color:#0f1419;}
.handle{font-size:26px;color:#5b6470;margin-top:2px;}
.text{font-size:40px;line-height:1.3;color:#0f1419;font-weight:400;margin-bottom:32px;}
.collage{display:grid;gap:10px;flex:1;border-radius:18px;overflow:hidden;}
.collage img{width:100%;height:100%;object-fit:cover;}
.collage.two_up{grid-template-columns:1fr 1fr;}
.collage.three_up{grid-template-columns:1fr 1fr;grid-template-rows:1.4fr 1fr;}
.collage.three_up img:first-child{grid-column:1 / span 2;}
.collage.grid_2x2{grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;}
</style></head><body>
<div class="head">
  <div style="width:72px;height:72px;border-radius:16px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:30px;">A</div>
  <div>
    <div class="name-row"><span class="name">Acme Newsroom</span><svg class="verified-tick" width="26" height="26" viewBox="0 0 24 24" fill="#e11d48"><path d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.16-.032.322-.032.486 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.164-.012-.326-.032-.486 1.16-.688 1.943-1.99 1.943-3.486zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z"/></svg></div>
    <div class="handle">@acmenews</div>
  </div>
</div>
<div class="text">Markets rally as central banks signal a pause on rate hikes</div>
<div class="collage grid_2x2"><img src="https://cdn.example.com/tile1.jpg"/><img src="https://cdn.example.com/tile2.jpg"/><img src="https://cdn.example.com/tile3.jpg"/><img src="https://cdn.example.com/tile4.jpg"/></div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > postcard_grid no-tiles render is deterministic (header-only) 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;font-family:'Inter',system-ui,sans-serif;background:#ffffff;padding:64px 56px;display:flex;flex-direction:column;}
.head{display:flex;align-items:center;gap:18px;margin-bottom:28px;}
.name-row{display:flex;align-items:center;gap:8px;}
.name{font-size:34px;font-weight:800;color:#0f1419;}
.handle{font-size:26px;color:#5b6470;margin-top:2px;}
.text{font-size:40px;line-height:1.3;color:#0f1419;font-weight:400;margin-bottom:32px;}
.collage{display:grid;gap:10px;flex:1;border-radius:18px;overflow:hidden;}
.collage img{width:100%;height:100%;object-fit:cover;}
.collage.two_up{grid-template-columns:1fr 1fr;}
.collage.three_up{grid-template-columns:1fr 1fr;grid-template-rows:1.4fr 1fr;}
.collage.three_up img:first-child{grid-column:1 / span 2;}
.collage.grid_2x2{grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;}
</style></head><body>
<div class="head">
  <div style="width:72px;height:72px;border-radius:16px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:30px;">A</div>
  <div>
    <div class="name-row"><span class="name">Acme Newsroom</span><svg class="verified-tick" width="26" height="26" viewBox="0 0 24 24" fill="#e11d48"><path d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.16-.032.322-.032.486 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.164-.012-.326-.032-.486 1.16-.688 1.943-1.99 1.943-3.486zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z"/></svg></div>
    <div class="handle">@acmenews</div>
  </div>
</div>
<div class="text">Markets rally as central banks signal a pause on rate hikes</div>

</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > postcard_grid three_up render is deterministic 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;font-family:'Inter',system-ui,sans-serif;background:#ffffff;padding:64px 56px;display:flex;flex-direction:column;}
.head{display:flex;align-items:center;gap:18px;margin-bottom:28px;}
.name-row{display:flex;align-items:center;gap:8px;}
.name{font-size:34px;font-weight:800;color:#0f1419;}
.handle{font-size:26px;color:#5b6470;margin-top:2px;}
.text{font-size:40px;line-height:1.3;color:#0f1419;font-weight:400;margin-bottom:32px;}
.collage{display:grid;gap:10px;flex:1;border-radius:18px;overflow:hidden;}
.collage img{width:100%;height:100%;object-fit:cover;}
.collage.two_up{grid-template-columns:1fr 1fr;}
.collage.three_up{grid-template-columns:1fr 1fr;grid-template-rows:1.4fr 1fr;}
.collage.three_up img:first-child{grid-column:1 / span 2;}
.collage.grid_2x2{grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;}
</style></head><body>
<div class="head">
  <div style="width:72px;height:72px;border-radius:16px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:30px;">A</div>
  <div>
    <div class="name-row"><span class="name">Acme Newsroom</span><svg class="verified-tick" width="26" height="26" viewBox="0 0 24 24" fill="#e11d48"><path d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.16-.032.322-.032.486 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.164-.012-.326-.032-.486 1.16-.688 1.943-1.99 1.943-3.486zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z"/></svg></div>
    <div class="handle">@acmenews</div>
  </div>
</div>
<div class="text">Markets rally as central banks signal a pause on rate hikes</div>
<div class="collage three_up"><img src="https://cdn.example.com/tile1.jpg"/><img src="https://cdn.example.com/tile2.jpg"/><img src="https://cdn.example.com/tile3.jpg"/></div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > postcard_grid two_up render is deterministic 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;font-family:'Inter',system-ui,sans-serif;background:#ffffff;padding:64px 56px;display:flex;flex-direction:column;}
.head{display:flex;align-items:center;gap:18px;margin-bottom:28px;}
.name-row{display:flex;align-items:center;gap:8px;}
.name{font-size:34px;font-weight:800;color:#0f1419;}
.handle{font-size:26px;color:#5b6470;margin-top:2px;}
.text{font-size:40px;line-height:1.3;color:#0f1419;font-weight:400;margin-bottom:32px;}
.collage{display:grid;gap:10px;flex:1;border-radius:18px;overflow:hidden;}
.collage img{width:100%;height:100%;object-fit:cover;}
.collage.two_up{grid-template-columns:1fr 1fr;}
.collage.three_up{grid-template-columns:1fr 1fr;grid-template-rows:1.4fr 1fr;}
.collage.three_up img:first-child{grid-column:1 / span 2;}
.collage.grid_2x2{grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;}
</style></head><body>
<div class="head">
  <div style="width:72px;height:72px;border-radius:16px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:30px;">A</div>
  <div>
    <div class="name-row"><span class="name">Acme Newsroom</span><svg class="verified-tick" width="26" height="26" viewBox="0 0 24 24" fill="#e11d48"><path d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.16-.032.322-.032.486 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.164-.012-.326-.032-.486 1.16-.688 1.943-1.99 1.943-3.486zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z"/></svg></div>
    <div class="handle">@acmenews</div>
  </div>
</div>
<div class="text">Markets rally as central banks signal a pause on rate hikes</div>
<div class="collage two_up"><img src="https://cdn.example.com/tile1.jpg"/><img src="https://cdn.example.com/tile2.jpg"/></div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > premium_editorial cover render is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:linear-gradient(135deg, #e11d48, #11131a);-webkit-font-smoothing:antialiased;}
.bg{position:absolute;inset:0;background:linear-gradient(135deg, #e11d48, #11131a);}
.scrim{position:absolute;inset:0;background:linear-gradient(to top, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 50%, rgba(0,0,0,0) 100%);}
.photo-scrim{position:absolute;left:0;right:0;bottom:0;height:62%;background:linear-gradient(to top, rgba(0,0,0,0.82) 0%, rgba(0,0,0,0.45) 40%, rgba(0,0,0,0) 100%);}
.logo{position:absolute;top:44px;left:48px;}
.block{position:absolute;left:56px;right:56px;bottom:96px;}
.label{font-style:italic;font-size:26px;font-weight:600;color:rgba(255,255,255,0.8);letter-spacing:0.01em;text-shadow:0 2px 22px rgba(0,0,0,0.55);}
.rule{width:64px;height:4px;background:#e11d48;border-radius:2px;margin:14px 0 22px;}
.headline{color:#ffffff;font-size:54px;font-weight:900;line-height:1.06;letter-spacing:-0.02em;word-break:break-word;text-shadow:0 2px 22px rgba(0,0,0,0.55);}
.handle{position:absolute;bottom:44px;left:56px;color:rgba(255,255,255,0.8);font-size:20px;font-weight:500;text-shadow:0 2px 22px rgba(0,0,0,0.55);}
</style></head><body>
<div class="bg"></div><div class="scrim"></div>
<div class="logo"><div style="width:64px;height:64px;border-radius:14px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:27px;">A</div></div>
<div class="block">
  <div class="label">Acme Newsroom</div>
  <div class="rule"></div>
  <div class="headline">Markets rally as central banks signal a pause on rate hikes</div>
</div>
<div class="handle">@acmenews</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > premium_editorial cover with NO brandColor (default accent) is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;position:relative;font-family:'Inter',system-ui,sans-serif;background:linear-gradient(135deg, #e11d48, #11131a);-webkit-font-smoothing:antialiased;}
.bg{position:absolute;inset:0;background:linear-gradient(135deg, #e11d48, #11131a);}
.scrim{position:absolute;inset:0;background:linear-gradient(to top, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 50%, rgba(0,0,0,0) 100%);}
.photo-scrim{position:absolute;left:0;right:0;bottom:0;height:62%;background:linear-gradient(to top, rgba(0,0,0,0.82) 0%, rgba(0,0,0,0.45) 40%, rgba(0,0,0,0) 100%);}
.logo{position:absolute;top:44px;left:48px;}
.block{position:absolute;left:56px;right:56px;bottom:96px;}
.label{font-style:italic;font-size:26px;font-weight:600;color:rgba(255,255,255,0.8);letter-spacing:0.01em;text-shadow:0 2px 22px rgba(0,0,0,0.55);}
.rule{width:64px;height:4px;background:#e11d48;border-radius:2px;margin:14px 0 22px;}
.headline{color:#ffffff;font-size:54px;font-weight:900;line-height:1.06;letter-spacing:-0.02em;word-break:break-word;text-shadow:0 2px 22px rgba(0,0,0,0.55);}
.handle{position:absolute;bottom:44px;left:56px;color:rgba(255,255,255,0.8);font-size:20px;font-weight:500;text-shadow:0 2px 22px rgba(0,0,0,0.55);}
</style></head><body>
<div class="bg"></div><div class="scrim"></div>
<div class="logo"><div style="width:64px;height:64px;border-radius:14px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:27px;">A</div></div>
<div class="block">
  <div class="label">Acme Newsroom</div>
  <div class="rule"></div>
  <div class="headline">Markets rally as central banks signal a pause on rate hikes</div>
</div>
<div class="handle">@acmenews</div>
</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > tweet_card cover render is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;font-family:'Inter',system-ui,sans-serif;background:#ffffff;padding:64px 56px;display:flex;flex-direction:column;}
.head{display:flex;align-items:center;gap:18px;margin-bottom:28px;}
.name-row{display:flex;align-items:center;gap:8px;}
.name{font-size:34px;font-weight:800;color:#0f1419;}
.handle{font-size:26px;color:#5b6470;margin-top:2px;}
.text{font-size:40px;line-height:1.3;color:#0f1419;font-weight:400;margin-bottom:32px;}
.pair{display:grid;grid-template-columns:1fr 1fr;gap:10px;flex:1;border-radius:18px;overflow:hidden;}
.pair img{width:100%;height:100%;object-fit:cover;}
.single{flex:1;border-radius:18px;overflow:hidden;}
.single img{width:100%;height:100%;object-fit:cover;}
</style></head><body>
<div class="head">
  <div style="width:72px;height:72px;border-radius:16px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:30px;">A</div>
  <div>
    <div class="name-row"><span class="name">Acme Newsroom</span><svg class="verified-tick" width="26" height="26" viewBox="0 0 24 24" fill="#e11d48"><path d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.16-.032.322-.032.486 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.164-.012-.326-.032-.486 1.16-.688 1.943-1.99 1.943-3.486zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z"/></svg></div>
    <div class="handle">@acmenews</div>
  </div>
</div>
<div class="text">Markets rally as central banks signal a pause on rate hikes</div>

</body></html>"
`;

exports[`Repurpose render golden gate — default path is byte-identical (Phase 4 Task 10) > tweet_card cover with NO brandColor (default accent) is unchanged 1`] = `
"<!DOCTYPE html><html><head><meta charset="utf-8"><style>
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
*{margin:0;padding:0;box-sizing:border-box;}
body{width:1080px;height:1350px;overflow:hidden;font-family:'Inter',system-ui,sans-serif;background:#ffffff;padding:64px 56px;display:flex;flex-direction:column;}
.head{display:flex;align-items:center;gap:18px;margin-bottom:28px;}
.name-row{display:flex;align-items:center;gap:8px;}
.name{font-size:34px;font-weight:800;color:#0f1419;}
.handle{font-size:26px;color:#5b6470;margin-top:2px;}
.text{font-size:40px;line-height:1.3;color:#0f1419;font-weight:400;margin-bottom:32px;}
.pair{display:grid;grid-template-columns:1fr 1fr;gap:10px;flex:1;border-radius:18px;overflow:hidden;}
.pair img{width:100%;height:100%;object-fit:cover;}
.single{flex:1;border-radius:18px;overflow:hidden;}
.single img{width:100%;height:100%;object-fit:cover;}
</style></head><body>
<div class="head">
  <div style="width:72px;height:72px;border-radius:16px;background:#e11d48;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:30px;">A</div>
  <div>
    <div class="name-row"><span class="name">Acme Newsroom</span><svg class="verified-tick" width="26" height="26" viewBox="0 0 24 24" fill="#1d9bf0"><path d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.16-.032.322-.032.486 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.164-.012-.326-.032-.486 1.16-.688 1.943-1.99 1.943-3.486zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z"/></svg></div>
    <div class="handle">@acmenews</div>
  </div>
</div>
<div class="text">Markets rally as central banks signal a pause on rate hikes</div>

</body></html>"
`;
